--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 body {
-  font-family: "Noto Sans TC", sans-serif;
+  font-family: "Otomanopee One", sans-serif;
   margin: 0;
 }
-h1 {
+.main-heading {
   font-weight: 900;
-  font-size: 32px;
+  font-size: 80px;
   margin: 0;
+  color: gray;
+}
+h1 {
+  font-size: 40px;
 }
 
 .flexible-content {
@@ -33,13 +37,18 @@ h1 {
   padding: 20px;
   border-radius: 20px;
   color: #fff;
+  font-size: 20px;
+}
+.order-button:hover {
+  color: rgba(255, 123, 0, 0.877);
+  background: linear-gradient(white, gray);
 }
 .image-sizing {
   width: 80%;
   /* margin-top: 50px; */
 }
 .background {
-  background: url("7.png");
+  background: url("images/7.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -50,14 +59,15 @@ h1 {
   width: auto;
 }
 .about {
-  margin: 100px;
-  padding: 100px;
+  margin: 80px;
+  padding: 50px;
 }
 .about h1 {
   margin-bottom: 32px;
 }
 .about .starter-section-paragraph {
   margin-bottom: 112px;
+  font-weight: 300;
 }
 .recipies-header {
   text-align: center;
